--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,53 @@
+nav {
+    background-color: black;
+    text-decoration: none;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(123, 183, 235);
+}
+
+body {
+    background-color: #ccc;
+    margin: auto;
+}
+
+.page {
+    margin-left: 20px;
+}
+
+.grp-stage-h2 {
+    margin-top: 100px;
+    text-align: center;
+}
+
+.group-stage {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
 .bracket-view {
     display: flex;
     flex-direction: row;
     gap: 50px;
+    margin-left: 20px;
+    text-align: center;
 }
 
 .bracket {
@@ -26,6 +72,12 @@
     border: 2px solid;
     width: 200px;
     height: 70px;
+    background-color: azure;
+    cursor: pointer;
+}
+
+.match:hover {
+    background-color: red;
 }
 
 .date {
