--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,34 +1,48 @@
-nav {
-    background-color: black;
+div {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+.header-nav {
+    display: flex;
     text-decoration: none;
     position: fixed;
     top: 0;
     z-index: 999;
-    width: 100%;
+    margin-left: 20px;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 
-.header-list {
+.logo {
+    height: 60px;
+    width: 60px;
+}
+
+ul {
     list-style: none;
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
-a {
-    text-decoration: none;
-    color: rgb(123, 183, 235);
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background-color: #ccc;
+    background-color: #F0FFFF;
+    margin: 0;
+}
+
+h1,
+h2 {
+    color: #191970;
     margin: 0;
 }
 
 .page {
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
+    margin-top: 60px;
     margin-left: 20px;
+    gap: 50px;
 }
 
 .grp-stage-h2 {
@@ -41,7 +55,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
-
+    margin-top: 10px;
 }
 
 .bracket-view {
@@ -50,7 +64,6 @@ body {
     gap: 50px;
     text-align: center;
     flex-wrap: wrap;
-    margin-top: 50px;
     margin-bottom: 50px;
 }
 
@@ -76,18 +89,22 @@ body {
     gap: 5px;
     width: 200px;
     height: 70px;
-    background-color: azure;
+    background-color: #ADD8E6;
     cursor: pointer;
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3);
     border-radius: 15px;
+    color: #191970;
 }
 
 .match:hover {
-    background-color: rgb(164, 164, 164);
+    background-color: #40B5AD;
 }
 
 .date {
     text-align: center;
+}
+.details-date {
+    font-weight: bold;
 }
 
 .qf {
@@ -117,32 +134,21 @@ body {
     gap: 250px;
 }
 
-.f-bracket {
+.trophy {
+    margin-top: 190px;
+    height: 200px;
+    width: 100px;
+}
+
+.f {
     display: flex;
     flex-direction: column;
-    margin-top: 310px;
+    gap: 290px;
+    align-items: center;
 }
 
 .match-info {
     text-align: center;
-}
-
-.teams-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 10px;
-
-}
-
-.players-list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 0;
 }
 
 .field {
@@ -155,8 +161,45 @@ body {
     background-size: contain;
 }
 
+.field ul:nth-child(1) {
+    grid-row: 6 / 7;
+    grid-column: 2 / 4;
+    align-self: center;
+}
 
+.field ul:nth-child(2) {
+    grid-row: 5;
+    grid-column: 1 / 5;
 
+}
+
+.field ul:nth-child(3) {
+    grid-row: 3;
+    grid-column: 1 / 5;
+
+}
+
+.field ul:nth-child(4) {
+    grid-row: 1;
+    grid-column: 1 / 5;
+
+}
+
+.defenders-list,
+.midfielders-list,
+.forwards-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: last baseline;
+}
+
+.defenders-list li:first-child,
+.defenders-list li:last-child,
+.midfielders-list li:first-child,
+.midfielders-list li:last-child {
+    align-self: baseline;
+}
 
 .team-click {
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3);
@@ -166,6 +209,8 @@ body {
     font-size: 20px;
     border-radius: 15px;
     cursor: pointer;
+    color: #191970;
+    font-weight: bold;
 }
 
 .team-click:hover {
@@ -182,13 +227,67 @@ body {
 
 .score-details {
     font-size: 50px;
+    color: #191970;
 }
 
 .played-players {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-@media only screen and (max-width: 600px) {
+.a-players {
+    color: rgb(144, 10, 10);
+    font-family: cursive;
+    font-weight: bold;
+}
+
+.b-players {
+    color: rgb(32, 8, 109);
+    font-family: cursive;
+    font-weight: bold;
+
+}
+
+.teams-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
+
+.players-list {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 0;
+    color: #0F52BA;
+    font-weight: bold;
+}
+
+.teams-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+    width: 223px;
+    font-weight: bold;
+}
+
+.details-players-list {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 0;
+    font-weight: bold;
+}
+
+@media only screen and (max-width: 768px) {
     .match-details-team {
         flex-direction: column;
     }
