--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -103,6 +103,7 @@ h2 {
 .date {
     text-align: center;
 }
+
 .details-date {
     font-weight: bold;
 }
@@ -286,6 +287,36 @@ h2 {
     padding: 0;
     font-weight: bold;
 }
+
+/* Position-specific background colors */
+.GK {
+    background-color: green;
+    color: white;
+    border-radius: 15px;
+    padding: 4px;
+}
+
+.DF {
+    background-color: blue;
+    color: white;
+    border-radius: 15px;
+    padding: 5px;
+}
+
+.MF {
+    background-color: yellow;
+    color: black;
+    border-radius: 15px;
+    padding: 5px;
+}
+
+.FW {
+    background-color: red;
+    color: white;
+    border-radius: 15px;
+    padding: 4px;
+}
+
 
 @media only screen and (max-width: 768px) {
     .match-details-team {
